feat(banner): add text color tokens

--- a/src/patternfly/components/Banner/banner.scss
+++ b/src/patternfly/components/Banner/banner.scss
@@ -25,24 +25,38 @@
   --#{$banner}--link--disabled--TextDecoration: none;
 
   // modifier variables
-  --#{$banner}--m-danger--BackgroundColor: var(--pf-t--global--color--status--danger--default);
-  --#{$banner}--m-success--BackgroundColor: var(--pf-t--global--color--status--success--default);
-  --#{$banner}--m-warning--BackgroundColor: var(--pf-t--global--color--status--warning--default);
-  --#{$banner}--m-info--BackgroundColor: var(--pf-t--global--color--status--info--default);
-  --#{$banner}--m-custom--BackgroundColor: var(--pf-t--global--color--status--custom--default);
   --#{$banner}--m-sticky--ZIndex: var(--#{$pf-global}--ZIndex--md);
   --#{$banner}--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--md);
+
+  // status modifier variables
+  --#{$banner}--m-danger--BackgroundColor: var(--pf-t--global--color--status--danger--default);
+  --#{$banner}--m-danger--Color: var(--pf-t--global--text--color--status--on-danger--default);
+  --#{$banner}--m-success--BackgroundColor: var(--pf-t--global--color--status--success--default);
+  --#{$banner}--m-success--Color: var(--pf-t--global--text--color--status--on-success--default);
+  --#{$banner}--m-warning--BackgroundColor: var(--pf-t--global--color--status--warning--default);
+  --#{$banner}--m-warning--Color: var(--pf-t--global--text--color--status--on-warning--default);
+  --#{$banner}--m-info--BackgroundColor: var(--pf-t--global--color--status--info--default);
   --#{$banner}--m-info--Color: var(--pf-t--global--text--color--status--on-info--default);
+  --#{$banner}--m-custom--BackgroundColor: var(--pf-t--global--color--status--custom--default);
+  --#{$banner}--m-custom--Color: var(--pf-t--global--text--color--status--on-custom--default);
 
   // nonstatus modifier variables
   --#{$banner}--m-red--BackgroundColor: var(--pf-t--global--color--nonstatus--red--default);
+  --#{$banner}--m-red--Color: var(--pf-t--global--text--color--nonstatus--on-red--default);
   --#{$banner}--m-orangered--BackgroundColor: var(--pf-t--global--color--nonstatus--orangered--default);
+  --#{$banner}--m-orangered--Color: var(--pf-t--global--text--color--nonstatus--on-orangered--default);
   --#{$banner}--m-orange--BackgroundColor: var(--pf-t--global--color--nonstatus--orange--default);
+  --#{$banner}--m-orange--Color: var(--pf-t--global--text--color--nonstatus--on-orange--default);
   --#{$banner}--m-gold--BackgroundColor: var(--pf-t--global--color--nonstatus--gold--default);
+  --#{$banner}--m-gold--Color: var(--pf-t--global--text--color--nonstatus--on-gold--default);
   --#{$banner}--m-green--BackgroundColor: var(--pf-t--global--color--nonstatus--green--default);
+  --#{$banner}--m-green--Color: var(--pf-t--global--text--color--nonstatus--on-green--default);
   --#{$banner}--m-cyan--BackgroundColor: var(--pf-t--global--color--nonstatus--cyan--default);
+  --#{$banner}--m-cyan--Color: var(--pf-t--global--text--color--nonstatus--on-cyan--default);
   --#{$banner}--m-blue--BackgroundColor: var(--pf-t--global--color--nonstatus--blue--default);
+  --#{$banner}--m-blue--Color: var(--pf-t--global--text--color--nonstatus--on-blue--default);
   --#{$banner}--m-purple--BackgroundColor: var(--pf-t--global--color--nonstatus--purple--default);
+  --#{$banner}--m-purple--Color: var(--pf-t--global--text--color--nonstatus--on-purple--default);
 }
 
 .#{$banner} {
@@ -58,14 +72,17 @@
 
   &.pf-m-danger {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-danger--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-danger--Color);
   }
 
   &.pf-m-success {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-success--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-success--Color);
   }
 
   &.pf-m-warning {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-warning--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-warning--Color);
   }
 
   &.pf-m-info {
@@ -75,34 +92,42 @@
 
   &.pf-m-red {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-red--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-red--Color);
   }
   
   &.pf-m-orangered {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-orangered--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-orangered--Color);
   }
 
   &.pf-m-orange {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-orange--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-orange--Color);
   }
 
   &.pf-m-gold {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-gold--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-gold--Color);
   }
 
   &.pf-m-green {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-green--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-green--Color);
   }
 
   &.pf-m-cyan {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-cyan--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-cyan--Color);
   }
 
   &.pf-m-blue {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-blue--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-blue--Color);
   }
 
   &.pf-m-purple {
     --#{$banner}--BackgroundColor: var(--#{$banner}--m-purple--BackgroundColor);
+    --#{$banner}--Color: var(--#{$banner}--m-purple--Color);
   }
 
   &.pf-m-sticky {
