--- a/src/patternfly/components/Pagination/pagination-options-menu.hbs
+++ b/src/patternfly/components/Pagination/pagination-options-menu.hbs
@@ -1,18 +1,23 @@
-{{#> options-menu options-menu--IsPlainWithText="true" options-menu--HasToggleIcon="true" options-menu-toggle-button--aria-label="Items per page" options-menu--modifier=pagination-options-menu--modifier options-menu--id=pagination-options-menu--id}}
-  {{#> options-menu-toggle}}
-    {{#> options-menu-toggle-text}}
-      <b>1 - 10</b>&nbsp;of&nbsp;<b>{{#if pagination--IsIndeterminate}}many{{else}}36{{/if}}</b>
-    {{/options-menu-toggle-text}}
-  {{/options-menu-toggle}}
-  {{#> options-menu-menu}}
-    {{#> options-menu-menu-item}}
-      5 per page
-    {{/options-menu-menu-item}}
-    {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
-      10 per page
-    {{/options-menu-menu-item}}
-    {{#> options-menu-menu-item}}
-      20 per page
-    {{/options-menu-menu-item}}
-  {{/options-menu-menu}}
-{{/options-menu}}
+<div class="{{pfv}}pagination__page-menu{{#if pagination-nav--modifier}} {{pagination-nav--modifier}}{{/if}}"
+  {{#if pagination__page-menu--attribute}}
+    {{{pagination__page-menu--attribute}}}
+  {{/if}}>
+  {{#> options-menu options-menu--IsPlainWithText="true" options-menu--HasToggleIcon="true" options-menu-toggle-button--aria-label="Items per page" options-menu--modifier=pagination-options-menu--modifier options-menu--id=pagination-options-menu--id}}
+    {{#> options-menu-toggle}}
+      {{#> options-menu-toggle-text}}
+        <b>1 - 10</b>&nbsp;of&nbsp;<b>{{#if pagination--IsIndeterminate}}many{{else}}36{{/if}}</b>
+      {{/options-menu-toggle-text}}
+    {{/options-menu-toggle}}
+    {{#> options-menu-menu}}
+      {{#> options-menu-menu-item}}
+        5 per page
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
+        10 per page
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item}}
+        20 per page
+      {{/options-menu-menu-item}}
+    {{/options-menu-menu}}
+  {{/options-menu}}
+</div>
