--- a/src/patternfly/components/Nav/nav-item.hbs
+++ b/src/patternfly/components/Nav/nav-item.hbs
@@ -1,6 +1,6 @@
 <li class="{{pfv}}nav__item
   {{setModifiers
-    nav-item--IsExpandable='pf-m-expandable'
+    nav-item--expandable='pf-m-expandable'
     nav-item--IsExpandable='pf-m-expandable'
     nav-item--IsDrilldown='pf-m-drilldown'
     nav-item--IsFlyout='pf-m-flyout'
