chore(tokens): use semantic border width

--- a/src/patternfly/components/Hint/hint.scss
+++ b/src/patternfly/components/Hint/hint.scss
@@ -8,7 +8,7 @@
   --#{$hint}--PaddingLeft: var(--pf-t--global--spacer--lg);
   --#{$hint}--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$hint}--BorderColor: var(--pf-t--global--border--color--status--info--default);
-  --#{$hint}--BorderWidth: var(--pf-t--global--border--width--200); // TODO - need semantic variable
+  --#{$hint}--BorderWidth: var(--pf-t--global--border--width--box--status--default);
   --#{$hint}--BorderRadius: var(--pf-t--global--border--radius--medium);
   --#{$hint}--Color: var(--pf-t--global--text--color--regular);
 
