chore(tokens): add missing px dimensions

--- a/src/patternfly/base/tokens/_tokens-default.scss
+++ b/src/patternfly/base/tokens/_tokens-default.scss
@@ -12,14 +12,14 @@
   --pf-t--global--Zindex--300: 300;
   --pf-t--global--Zindex--200: 200;
   --pf-t--global--Zindex--100: 100;
-  --pf-t--global--font--size--800: 36;
-  --pf-t--global--font--size--700: 28;
-  --pf-t--global--font--size--600: 22;
-  --pf-t--global--font--size--500: 20;
-  --pf-t--global--font--size--400: 18;
-  --pf-t--global--font--size--300: 16;
-  --pf-t--global--font--size--200: 14;
-  --pf-t--global--font--size--100: 12;
+  --pf-t--global--font--size--800: 36px;
+  --pf-t--global--font--size--700: 28px;
+  --pf-t--global--font--size--600: 22px;
+  --pf-t--global--font--size--500: 20px;
+  --pf-t--global--font--size--400: 18px;
+  --pf-t--global--font--size--300: 16px;
+  --pf-t--global--font--size--200: 14px;
+  --pf-t--global--font--size--100: 12px;
   --pf-t--global--border--radius--500: 999px;
   --pf-t--global--border--radius--400: 24px;
   --pf-t--global--border--radius--300: 16px;
@@ -109,14 +109,14 @@
   --pf-t--global--Zindex--md: 300;
   --pf-t--global--Zindex--sm: 200;
   --pf-t--global--Zindex--xs: 100;
-  --pf-t--global--font--size--4xl: 36;
-  --pf-t--global--font--size--3xl: 28;
-  --pf-t--global--font--size--2xl: 22;
-  --pf-t--global--font--size--xl: 20;
-  --pf-t--global--font--size--lg: 18;
-  --pf-t--global--font--size--md: 16;
-  --pf-t--global--font--size--sm: 14;
-  --pf-t--global--font--size--xs: 12;
+  --pf-t--global--font--size--4xl: 36px;
+  --pf-t--global--font--size--3xl: 28px;
+  --pf-t--global--font--size--2xl: 22px;
+  --pf-t--global--font--size--xl: 20px;
+  --pf-t--global--font--size--lg: 18px;
+  --pf-t--global--font--size--md: 16px;
+  --pf-t--global--font--size--sm: 14px;
+  --pf-t--global--font--size--xs: 12px;
   --pf-t--global--border--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--border--color--100: var(--pf-t--color--gray--30);
   --pf-t--global--border--radius--pill: var(--pf-t--global--border--radius--500);
@@ -244,15 +244,15 @@
   --pf-t--global--background--color--primary--default: var(--pf-t--global--background--color--100);
   --pf-t--global--background--color--highlight--clicked: var(--pf-t--global--background--color--highlight--200);
   --pf-t--global--background--color--highlight--default: var(--pf-t--global--background--color--highlight--100);
-  --pf-t--global--font--size--heading--h6: 16;
-  --pf-t--global--font--size--heading--h5: 16;
-  --pf-t--global--font--size--heading--h4: 16;
-  --pf-t--global--font--size--heading--h3: 18;
-  --pf-t--global--font--size--heading--h2: 20;
-  --pf-t--global--font--size--heading--h1: 22;
-  --pf-t--global--font--size--body--large: 16;
-  --pf-t--global--font--size--body--default: 14;
-  --pf-t--global--font--size--body--small: 12;
+  --pf-t--global--font--size--heading--h6: 16px;
+  --pf-t--global--font--size--heading--h5: 16px;
+  --pf-t--global--font--size--heading--h4: 16px;
+  --pf-t--global--font--size--heading--h3: 18px;
+  --pf-t--global--font--size--heading--h2: 20px;
+  --pf-t--global--font--size--heading--h1: 22px;
+  --pf-t--global--font--size--body--large: 16px;
+  --pf-t--global--font--size--body--default: 14px;
+  --pf-t--global--font--size--body--small: 12px;
   --pf-t--global--border--color--nonstatus--gray--clicked: var(--pf-t--global--color--nonstatus--gray--300);
   --pf-t--global--border--color--nonstatus--gray--hover: var(--pf-t--global--color--nonstatus--gray--300);
   --pf-t--global--border--color--nonstatus--gray--default: var(--pf-t--global--color--nonstatus--gray--200);
@@ -450,14 +450,14 @@
   --pf-t--global--icon--color--brand--clicked: var(--pf-t--global--color--brand--clicked);
   --pf-t--global--icon--color--brand--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--icon--color--brand--default: var(--pf-t--global--color--brand--default);
-  --pf-t--global--icon--size--body--large: 16;
-  --pf-t--global--icon--size--body--default: 14;
-  --pf-t--global--icon--size--body--small: 12;
-  --pf-t--global--icon--size--heading--h6: 16;
-  --pf-t--global--icon--size--heading--h5: 16;
-  --pf-t--global--icon--size--heading--h4: 16;
-  --pf-t--global--icon--size--heading--h3: 18;
-  --pf-t--global--icon--size--heading--h2: 20;
-  --pf-t--global--icon--size--heading--h1: 22;
+  --pf-t--global--icon--size--body--large: 16px;
+  --pf-t--global--icon--size--body--default: 14px;
+  --pf-t--global--icon--size--body--small: 12px;
+  --pf-t--global--icon--size--heading--h6: 16px;
+  --pf-t--global--icon--size--heading--h5: 16px;
+  --pf-t--global--icon--size--heading--h4: 16px;
+  --pf-t--global--icon--size--heading--h3: 18px;
+  --pf-t--global--icon--size--heading--h2: 20px;
+  --pf-t--global--icon--size--heading--h1: 22px;
   --pf-t--global--color--status--read--on-secondary: var(--pf-t--global--background--color--control--default);
 }
